Upload - scripts atualizados

--- a/src/SilverYellow.ipynb
+++ b/src/SilverYellow.ipynb
@@ -4,71 +4,6 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "0594a12e-06de-4e6b-9296-3875905e1c9b",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": [
-    "\n",
-    "<div align=\"center\">\n",
-    "\n",
-    "## Bruteforce Concept Demonstration\n",
-    "### A demonstration of the concept of bruteforcing a website or email login written in Python.\n",
-    "[![Python Badge](https://img.shields.io/badge/Made_with_Python-3776AB?logo=python&labelColor=white)](https://python.org/)\n",
-    "##\n",
-    "\n",
-    "[Intro](#introduction) • [Run it](#how-to-run-it) • [Use it](#how-to-use-it) • [Disclaimer](#disclaimer)\n",
-    "\n",
-    "</div>\n",
-    "\n",
-    "### Introduction\n",
-    "This project was assigned as a pet project for work. It is not meant to be used as a practical tool, but as an educational demonstration.\n",
-    "\n",
-    "This tries to demonstrate the underlying code behind bruteforce network attacks, both to websites and emails.\n",
-    "\n",
-    "### How to Run it\n",
-    "To run the application, simply invoke it with the appropriate flags for it to function. Using the `--help` flag will show a list of the available flags and options. Any missing flags for the code to function will be indicated on the terminal window.\n",
-    "\n",
-    "###### Run it with python:\n",
-    "```sh\n",
-    "python3 bruteforcer.py --help\n",
-    "```\n",
-    "\n",
-    "###### Or run it directly with a shell:\n",
-    "```sh\n",
-    "$(pwd)/bruteforcer.py --help\n",
-    "```\n",
-    "\n",
-    "> ###### Dependencies:\n",
-    "> This project depends on `python3` and the following python libraries: `argparse` `requests` `imaplib`\n",
-    "\n",
-    "### How to Use it\n",
-    "The application will execute the actions indicated by the entered flags and then _promptly_ exit. If any other actions are desired, run the program again using different flags.\n",
-    "\n",
-    "<img src=\".assets/images/BruteForcer.png\" alt=\"BruteForcer.py on a Terminal Window\" align=\"center\"/>\n",
-    "\n",
-    "##\n",
-    "> #### DISCLAIMER:\n",
-    "> **I do not condone the use of this software in any way that breaks the law, as it was made entirely for educational purposes.**\n",
-    "> \n",
-    "> The software is offered as is, and **I do not** take responsibility for any kind of misuse.\n",
-    "##\n",
-    "\n",
-    "<div align=\"center\">\n",
-    "\n",
-    "[![Back to the Top Badge](https://custom-icon-badges.demolab.com/badge/Back_to_the_Top-171515?logo=chevron-up)](#bruteforce-concept-demonstration)\n",
-    "\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
       "byteLimit": 2048000,
       "rowLimit": 10000
@@ -81,9 +16,9 @@
     }
    },
    "source": [
-    "# 📄 Criação da Tabela `BronzeYellow`\n",
+    "# 📄 Criação da Tabela `SilverYellow`\n",
     "Este script unifica os dados mensais de viagens **Yellow Taxi** de diferentes meses (`Mes01` a `Mes05`)  \n",
-    "em uma única tabela `BronzeYellow`, utilizando a operação `UNION ALL` para manter **todos os registros**.\n",
+    "em uma única tabela `SilverYellow`, utilizando a operação `UNION` removendo os registros duplicados.\n",
     "\n",
     "---\n",
     "\n",
@@ -91,33 +26,6 @@
     "Consolidar dados de múltiplas tabelas mensais em uma única base para facilitar análises, relatórios e KPIs globais.\n",
     "\n",
     "---\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "implicitDf": true,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "0ce5a597-f573-4bd2-8b0e-714fd0cd7bdb",
-     "showTitle": true,
-     "tableResultSettingsMap": {},
-     "title": "teste de nome"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%sql\n",
-    "-- Seleciona o catálogo e schema de destino\n",
-    "USE CATALOG ifood_case;\n",
-    "\n",
-    "\n",
-    "USE SCHEMA nytaxi;"
    ]
   },
   {
@@ -140,8 +48,13 @@
    "outputs": [],
    "source": [
     "%sql\n",
+    "\n",
+    "-- Seleciona o catálogo e schema de destino\n",
+    "USE CATALOG ifood_case;\n",
+    "USE SCHEMA  nytaxi;\n",
+    "\n",
     "-- Cria ou substitui a tabela unificada BronzeYellow\n",
-    "CREATE OR REPLACE TABLE BronzeYellow AS\n",
+    "CREATE OR REPLACE TABLE SilverYellow AS\n",
     "\n",
     "-- =========================================\n",
     "-- 1️⃣ União de todas as tabelas mensais\n",
@@ -175,7 +88,7 @@
     }
    },
    "source": [
-    "# ✅ Validação da tabela `BronzeYellow`\n",
+    "# ✅ Validação da tabela `SilverYellow`\n",
     "\n",
     "Nesta versão:\n",
     "- Cada regra de validação gera um elemento no array `lista_alertas`\n",
@@ -206,22 +119,9 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "WITH BronzeYellowValidate AS (\n",
+    "WITH SilverYellowValidate AS (\n",
     "  SELECT\n",
-    "    Data_Fim_Viagem\n",
-    "    , Data_Inicio_Viagem\n",
-    "    , Dia_Fim_Viagem\n",
-    "    , Dia_Inicio_Viagem\n",
-    "    , Hora_Fim_Viagem\n",
-    "    , Hora_Inicio_Viagem\n",
-    "    , Mes_Fim_Viagem\n",
-    "    , Mes_Inicio_Viagem\n",
-    "    , passenger_count\n",
-    "    , tpep_dropoff_datetime\n",
-    "    , tpep_pickup_datetime\n",
-    "    , total_amount\n",
-    "    , vendorId\n",
-    "\n",
+    "   *\n",
     "    -- =========================================\n",
     "    -- ARRAY DE REGRAS DE VALIDAÇÃO\n",
     "    -- Cada WHEN verdadeiro gera mensagem; falso gera NULL\n",
@@ -270,7 +170,7 @@
     "    , SIZE(lista_alertas)             AS  num_alertas       -- Quantidade de alertas\n",
     "    , CONCAT_WS('; ', lista_alertas)  AS  alerta_validacao  -- String com alertas separados\n",
     "FROM \n",
-    "  BronzeYellowValidate\n",
+    "      SilverYellowValidate\n",
     "WHERE \n",
     "  SIZE(lista_alertas) > 0; -- Retorna somente registros com alertas\n"
    ]
@@ -301,7 +201,7 @@
     },
     "pythonIndentUnit": 4
    },
-   "notebookName": "BronzeYellow",
+   "notebookName": "SilverYellow",
    "widgets": {}
   },
   "language_info": {
