--- a/src/SilverYellow.ipynb
+++ b/src/SilverYellow.ipynb
@@ -162,7 +162,7 @@
     "      , CASE WHEN vendorId IS NULL OR (vendorId NOT IN (1, 2, 6, 7))\n",
     "            THEN 'vendorId inválido' END\n",
     "    ), NULL) AS lista_alertas\n",
-    "  FROM BronzeYellow\n",
+    "  FROM SilverYellow\n",
     ")\n",
     "\n",
     "SELECT\n",
