--- a/src/GoldYellow.ipynb
+++ b/src/GoldYellow.ipynb
@@ -16,7 +16,7 @@
     }
    },
    "source": [
-    "# 🟨 Gold Layer — Tabela `GoldYellow`\n",
+    "# \uD83D\uDFE8 Gold Layer — Tabela `GoldYellow`\n",
     "Este notebook cria a tabela **`GoldYellow`** a partir da camada Silver (`SilverYellow`),  \n",
     "derivando colunas de **data/hora**, aplicando **tipagens**, e calculando KPIs com **window functions**:\n",
     "- `Media_Passageiros` → média de passageiros por *Data_Viagem + Hora_Inicio_Viagem*  \n",
@@ -42,7 +42,100 @@
      "title": ""
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/html": [
+       "<style scoped>\n",
+       "  .table-result-container {\n",
+       "    max-height: 300px;\n",
+       "    overflow: auto;\n",
+       "  }\n",
+       "  table, th, td {\n",
+       "    border: 1px solid black;\n",
+       "    border-collapse: collapse;\n",
+       "  }\n",
+       "  th, td {\n",
+       "    padding: 5px;\n",
+       "  }\n",
+       "  th {\n",
+       "    text-align: left;\n",
+       "  }\n",
+       "</style><div class='table-result-container'><table class='table-result'><thead style='background-color: white'><tr><th>num_affected_rows</th><th>num_inserted_rows</th></tr></thead><tbody></tbody></table></div>"
+      ]
+     },
+     "metadata": {
+      "application/vnd.databricks.v1+output": {
+       "addedWidgets": {},
+       "aggData": [],
+       "aggError": "",
+       "aggOverflow": false,
+       "aggSchema": [],
+       "aggSeriesLimitReached": false,
+       "aggType": "",
+       "arguments": {},
+       "columnCustomDisplayInfos": {},
+       "data": [],
+       "datasetInfos": [
+        {
+         "name": "_sqldf",
+         "schema": {
+          "fields": [
+           {
+            "metadata": {},
+            "name": "num_affected_rows",
+            "nullable": true,
+            "type": "long"
+           },
+           {
+            "metadata": {},
+            "name": "num_inserted_rows",
+            "nullable": true,
+            "type": "long"
+           }
+          ],
+          "type": "struct"
+         },
+         "tableIdentifier": null,
+         "typeStr": "pyspark.sql.connect.dataframe.DataFrame"
+        }
+       ],
+       "dbfsResultPath": null,
+       "isJsonSchema": true,
+       "metadata": {
+        "createTempViewForImplicitDf": true,
+        "dataframeName": "_sqldf",
+        "executionCount": 252
+       },
+       "overflow": false,
+       "plotOptions": {
+        "customPlotOptions": {},
+        "displayType": "table",
+        "pivotAggregation": null,
+        "pivotColumns": null,
+        "xColumns": null,
+        "yColumns": null
+       },
+       "removedWidgets": [],
+       "schema": [
+        {
+         "metadata": "{}",
+         "name": "num_affected_rows",
+         "type": "\"long\""
+        },
+        {
+         "metadata": "{}",
+         "name": "num_inserted_rows",
+         "type": "\"long\""
+        }
+       ],
+       "type": "table"
+      }
+     },
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%sql\n",
     "-- Contexto do catálogo/esquema onde a tabela será criada\n",
@@ -110,160 +203,6 @@
     "  , vendorId\n",
     "FROM \n",
     "  DateTimeMediumPassenger;\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "implicitDf": true,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "2e2fae78-3e3b-423b-99fc-4e730a905ac5",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%sql\n",
-    "\n",
-    "USE CATALOG ifood_case;\n",
-    "USE SCHEMA  nytaxi;\n",
-    "\n",
-    "SELECT\n",
-    "  Mes_Inicio_Viagem               AS  Mes_Viagem\n",
-    "  ,  ROUND(AVG(total_amount), 2)  AS  Media_Mensal_Total_Amount\n",
-    "FROM \n",
-    "  GoldYellow\n",
-    "WHERE\n",
-    "  Mes_Inicio_Viagem = Mes_Fim_Viagem\n",
-    "GROUP BY\n",
-    "  Mes_Viagem\n",
-    "ORDER BY\n",
-    "  Mes_Viagem ASC"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "implicitDf": true,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "bce22911-fdfa-44c8-b64e-0cd279448c7b",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%sql\n",
-    "\n",
-    "USE CATALOG ifood_case;\n",
-    "USE SCHEMA  nytaxi;\n",
-    "\n",
-    "WITH DateTimeMediumPassenger AS (\n",
-    "  SELECT\n",
-    "    DATE_FORMAT(tpep_pickup_datetime, 'dd-MM-yyyy')         AS  Data_Viagem\n",
-    "    , TRY_CAST(SUBSTRING(Hora_Inicio_Viagem, 1, 2) AS INT)  AS  Hora_Dia\n",
-    "    , TRY_CAST(passenger_count AS DOUBLE)                   AS  passenger_count\n",
-    "    , vendorId\n",
-    "    , total_amount\n",
-    "    , tpep_dropoff_datetime\n",
-    "    , tpep_pickup_datetime\n",
-    "  FROM\n",
-    "    GoldYellow\n",
-    "  WHERE\n",
-    "    Mes_Fim_Viagem        = 5\n",
-    "    AND Mes_Inicio_Viagem = 5\n",
-    ")\n",
-    "SELECT\n",
-    "  Data_Viagem\n",
-    "  , Hora_Dia\n",
-    "  , ROUND(AVG(passenger_count), 2)                        AS  Media_Passageiros\n",
-    "FROM\n",
-    "  DateTimeMediumPassenger\n",
-    "WHERE\n",
-    "  Hora_Dia BETWEEN 0 AND 23\n",
-    "GROUP BY\n",
-    "  Data_Viagem\n",
-    "  , Hora_Dia\n",
-    "ORDER BY\n",
-    "  Data_Viagem ASC,\n",
-    "  Hora_Dia ASC;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "da2c01eb-53f9-4e11-b670-c722f4816681",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "fim"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "fbaa6c24-26d4-49be-8db7-f77c42660c5b",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from pyspark.sql.functions import split, explode, trim\n",
-    "\n",
-    "df_exploded = df_validacao.select(\n",
-    "    explode(split('alerta_validacao', ';')).alias('alerta')\n",
-    ").withColumn('alerta', trim(F.col('alerta')))\n",
-    "\n",
-    "# Remover linhas vazias\n",
-    "df_exploded = df_exploded.filter(F.col('alerta') != '')\n",
-    "\n",
-    "# Contagem por tipo de alerta\n",
-    "df_alerta_count = df_exploded.groupBy('alerta').count().orderBy(F.desc('count'))\n",
-    "df_alerta_count.display()\n",
-    "\n",
-    "alertas_pd = df_alerta_count.toPandas()\n",
-    "import matplotlib.pyplot as plt\n",
-    "plt.figure(figsize=(10, 6))\n",
-    "plt.barh(alertas_pd['alerta'], alertas_pd['count'])\n",
-    "plt.xlabel('Ocorrências')\n",
-    "plt.title('Frequência dos Tipos de Alertas de Validação')\n",
-    "plt.gca().invert_yaxis()\n",
-    "plt.show()"
    ]
   }
  ],
